--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,14 +36,17 @@ ul li.checked::before {
 .form-control {
   border-radius: 5rem;
 }
+form {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 
-button {
+form button {
   border-radius: 5rem !important;
-  margin-left: 15px;
 }
-.list-group-item {
-  margin-top: 10px;
-}
+// .list-group-item {
+//   margin-top: 10px;
+// }
 
 .btn .btn-outline-danger {
   padding: 0px;
